# CAsMap

./: .gitignore  CMakeLists.txt  Makefile  Makefile.shared  README.md
cython_wrapper/: .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
cython_wrapper/demo_notebook/: sigpatsearch demo.ipynb
cython_wrapper/demo_notebook/.ipynb_checkpoints/: sigpatsearch demo-checkpoint.ipynb
cython_wrapper/doc/: Makefile  conf.py  index.rst
cython_wrapper/sigpatsearch/: .gitignore  CumulativeTimeMeasurement.cpp  CumulativeTimeMeasurement.h  FeatureSet.cpp  FeatureSet.h  FilterIntervals.cpp  FilterIntervals.h  Phenotype.cpp  Profiler.cpp  Profiler.h  SignificantFeaturesSearchTaroneCmh.cpp  SignificantFeaturesSearchWithCovariates.cpp  SignificantFeaturesSearchWithCovariates.h  SignificantIntervalSearch.cpp  SignificantIntervalSearchChi.cpp  SignificantIntervalSearchExact.cpp  SignificantIntervalSearchExact.h  SignificantIntervalSearchFais.cpp  SignificantIntervalSearchFastCmh.cpp  SignificantIntervalSearchFastCmh.h  SignificantIntervalSearchWy.cpp  SignificantIntervalSearchWy.h  SignificantIntervalSearchWyChi.cpp  SignificantIntervalSearchWyChi.h  SignificantItemsetSearchFacs.cpp  Summary.cpp  TransactionsData.cpp  __init__.py  chi2.h  double_comp.cpp  gamma.cpp  gamma.h  mem_rss.cpp  mem_rss.h  pval.cpp  pval.h  wrapper.pxd  wrapper.pyx
cython_wrapper/tests/: _test_import.py  runtests.sh  test_wrappers.py  test_wrappers_new.py
cython_wrapper/tests/data/: cov-char.txt  cov-long.txt  (+29 more)
doc/: Makefile  README.md  libsigpatsearch.doxyfile
examples/code/: run_high_order_epistasis.Rmd  run_higher_order_epistasis.Rmd  run_higher_order_epistasis.ipynb  run_region_based.Rmd  run_region_based.html  run_region_based.ipynb  split_dataset_athaliana.sh
executables/: Makefile  significant_interval_search_chi  significant_interval_search_chi.cpp  significant_interval_search_exact  significant_interval_search_exact.cpp  significant_interval_search_fastcmh  significant_interval_search_fastcmh.cpp  significant_interval_search_wy_chi  significant_interval_search_wy_chi.cpp  significant_interval_search_wy_exact  significant_interval_search_wy_exact.cpp  significant_itemset_search_facs  significant_itemset_search_facs.cpp
libsigpatsearch/: CumulativeTimeMeasurement.cpp  FeatureSet.cpp  FeatureSet.h  FilterIntervals.cpp  FilterIntervals.h  Genotype.cpp  Genotype.h  Makefile  Makefile.depend  Profiler.cpp  README.md  SignificantFeaturesSearch.cpp  SignificantFeaturesSearch.h  SignificantFeaturesSearchTaroneCmh.cpp  SignificantFeaturesSearchTaroneCmh.h  SignificantFeaturesSearchWithCovariates.cpp  SignificantFeaturesSearchWithCovariates.h  SignificantIntervalSearch.cpp  SignificantIntervalSearch.h  SignificantIntervalSearchChi.cpp  SignificantIntervalSearchChi.h  SignificantIntervalSearchExact.cpp  SignificantIntervalSearchExact.h  SignificantIntervalSearchFais.cpp  SignificantIntervalSearchFais.h  SignificantIntervalSearchFastCmh.cpp  SignificantIntervalSearchFastCmh.h  SignificantIntervalSearchWy.cpp  SignificantIntervalSearchWy.h  SignificantIntervalSearchWyChi.cpp  SignificantIntervalSearchWyChi.h  SignificantIntervalSearchWyExact.cpp  SignificantIntervalSearchWyExact.h  SignificantItemsetSearch.cpp  SignificantItemsetSearch.h  SignificantItemsetSearchFacs.cpp  SignificantItemsetSearchFacs.h  Summary.h  chi2.h  pval.cpp  (+1 more)
r_wrapper/: .Rbuildignore  DESCRIPTION  Makefile  NAMESPACE  README.md
r_wrapper/R/: RcppExports.R  sigpatsearch-package.R  wrapper.R
r_wrapper/man/: SignificantIntervalSearchChi-class.Rd  SignificantIntervalSearchExact-class.Rd  SignificantIntervalSearchFastCmh-class.Rd  SignificantIntervalSearchWyChi-class.Rd  SignificantIntervalSearchWyExact-class.Rd  SignificantItemsetSearchFacs-class.Rd  checkIsBoolean.Rd  isInOpenInterval.Rd  sigpatsearch.Rd
r_wrapper/man-roxygen/: SignificantFeaturesSearchWithCovariates_methods.R  SignificantFeaturesSearch_methods.R  SignificantIntervalSearchWy_methods.R  SignificantIntervalSearch_methods.R  SignificantItemsetSearch_methods.R
r_wrapper/sandbox/: README.md  build  build_local  check  cleanup  demo.r  example.r  run_tests
r_wrapper/src/: ArrayFile.cpp  ArrayFile.h  Exception.cpp  Exception.h  FilterIntervals.cpp  FilterIntervals.h  Genotype.cpp  Genotype.h  PValues.cpp  PValues.h  Phenotype.h  RcppExports.cpp  SignificantFeaturesSearch.cpp  SignificantFeaturesSearch.h  SignificantFeaturesSearchTaroneCmh.cpp  SignificantFeaturesSearchTaroneCmh.h  SignificantIntervalSearch.h  SignificantIntervalSearchChi.h  SignificantIntervalSearchExact.h  SignificantIntervalSearchFais.h  SignificantIntervalSearchWyExact.cpp  SignificantIntervalSearchWyExact.h  SignificantItemsetSearch.cpp  SignificantItemsetSearch.h  SignificantItemsetSearchFacs.h  Summary.h  TransactionsData.h  casmap.cpp  double_comp.h  gamma.h  mem_rss.cpp  sigpatsearch.cpp  types.h
r_wrapper/tests/: testthat.R
r_wrapper/vignettes/: sigpatsearch_html.Rmd
scripts/data/: covfastcmh2facs.sh  eth2transactions.py  transactions2eth_transposed.sh
scripts/output/: fais_to_output_sigints.sh
scripts/src/: reformat.sh
test/: _regression_test.sh  pyfiltering.py  regression_test.sh  regression_test_plink.sh
test/expected_output/: output_chi_sigints.csv  output_chi_summary.txt  output_chi_timing.txt  output_exact_data.txt  output_exact_sigints.csv  output_exact_summary.txt  output_exact_timing.txt  output_fastcmh_cov.txt  output_fastcmh_data.txt  output_fastcmh_label.txt  output_fastcmh_sigints.csv  output_fastcmh_sigints_filtered.corrected.csv  output_fastcmh_summary.txt  output_fastcmh_timing.txt  output_iset_facs_cov.txt  output_iset_facs_data.txt  output_iset_facs_label.txt  output_iset_facs_sigisets.csv  output_iset_facs_summary.txt  output_iset_facs_timing.txt  output_wy_chi_sigints.csv  output_wy_chi_sigints_filtered.corrected.csv  output_wy_chi_summary.txt  output_wy_chi_timing.txt  output_wy_exact_label.txt  output_wy_exact_sigints.csv  output_wy_exact_sigints_filtered.corrected.csv  output_wy_exact_summary.txt  output_wy_exact_timing.txt
(+78 files in other folders)
