cmake_minimum_required(VERSION 3.9)
project(CAsMap_light)

set(CMAKE_CXX_STANDARD 11)

add_executable(CAsMap_light
        cython_wrapper/sigpatsearch/ArrayFile.cpp
        cython_wrapper/sigpatsearch/ArrayFile.h
        cython_wrapper/sigpatsearch/chi2.h
        cython_wrapper/sigpatsearch/CumulativeTimeMeasurement.cpp
        cython_wrapper/sigpatsearch/CumulativeTimeMeasurement.h
        cython_wrapper/sigpatsearch/double_comp.cpp
        cython_wrapper/sigpatsearch/double_comp.h
        cython_wrapper/sigpatsearch/Exception.cpp
        cython_wrapper/sigpatsearch/Exception.h
        cython_wrapper/sigpatsearch/FeatureSet.cpp
        cython_wrapper/sigpatsearch/FeatureSet.h
        cython_wrapper/sigpatsearch/FilterIntervals.cpp
        cython_wrapper/sigpatsearch/FilterIntervals.h
        cython_wrapper/sigpatsearch/gamma.cpp
        cython_wrapper/sigpatsearch/gamma.h
        cython_wrapper/sigpatsearch/Genotype.cpp
        cython_wrapper/sigpatsearch/Genotype.h
        cython_wrapper/sigpatsearch/mem_rss.cpp
        cython_wrapper/sigpatsearch/mem_rss.h
        cython_wrapper/sigpatsearch/Phenotype.cpp
        cython_wrapper/sigpatsearch/Phenotype.h
        cython_wrapper/sigpatsearch/Profiler.cpp
        cython_wrapper/sigpatsearch/Profiler.h
        cython_wrapper/sigpatsearch/pval.cpp
        cython_wrapper/sigpatsearch/pval.h
        cython_wrapper/sigpatsearch/PValues.cpp
        cython_wrapper/sigpatsearch/PValues.h
        cython_wrapper/sigpatsearch/SignificantFeaturesSearch.cpp
        cython_wrapper/sigpatsearch/SignificantFeaturesSearch.h
        cython_wrapper/sigpatsearch/SignificantFeaturesSearchTaroneCmh.cpp
        cython_wrapper/sigpatsearch/SignificantFeaturesSearchTaroneCmh.h
        cython_wrapper/sigpatsearch/SignificantFeaturesSearchWithCovariates.cpp
        cython_wrapper/sigpatsearch/SignificantFeaturesSearchWithCovariates.h
        cython_wrapper/sigpatsearch/SignificantIntervalSearch.cpp
        cython_wrapper/sigpatsearch/SignificantIntervalSearch.h
        cython_wrapper/sigpatsearch/SignificantIntervalSearchChi.cpp
        cython_wrapper/sigpatsearch/SignificantIntervalSearchChi.h
        cython_wrapper/sigpatsearch/SignificantIntervalSearchExact.cpp
        cython_wrapper/sigpatsearch/SignificantIntervalSearchExact.h
        cython_wrapper/sigpatsearch/SignificantIntervalSearchFais.cpp
        cython_wrapper/sigpatsearch/SignificantIntervalSearchFais.h
        cython_wrapper/sigpatsearch/SignificantIntervalSearchFastCmh.cpp
        cython_wrapper/sigpatsearch/SignificantIntervalSearchFastCmh.h
        cython_wrapper/sigpatsearch/SignificantItemsetSearch.cpp
        cython_wrapper/sigpatsearch/SignificantItemsetSearch.h
        cython_wrapper/sigpatsearch/SignificantItemsetSearchFacs.cpp
        cython_wrapper/sigpatsearch/SignificantItemsetSearchFacs.h
        cython_wrapper/sigpatsearch/Summary.cpp
        cython_wrapper/sigpatsearch/Summary.h
        cython_wrapper/sigpatsearch/TransactionsData.cpp
        cython_wrapper/sigpatsearch/TransactionsData.h
        cython_wrapper/sigpatsearch/types.h
        cython_wrapper/sigpatsearch/wrapper.cpp
        executables/significant_interval_search_chi.cpp
        executables/significant_interval_search_exact.cpp
        executables/significant_interval_search_fastcmh.cpp
        executables/significant_itemset_search_facs.cpp
        libsigpatsearch/ArrayFile.cpp
        libsigpatsearch/ArrayFile.h
        libsigpatsearch/chi2.h
        libsigpatsearch/CumulativeTimeMeasurement.cpp
        libsigpatsearch/CumulativeTimeMeasurement.h
        libsigpatsearch/double_comp.cpp
        libsigpatsearch/double_comp.h
        libsigpatsearch/Exception.cpp
        libsigpatsearch/Exception.h
        libsigpatsearch/FeatureSet.cpp
        libsigpatsearch/FeatureSet.h
        libsigpatsearch/FilterIntervals.cpp
        libsigpatsearch/FilterIntervals.h
        libsigpatsearch/gamma.cpp
        libsigpatsearch/gamma.h
        libsigpatsearch/Genotype.cpp
        libsigpatsearch/Genotype.h
        libsigpatsearch/mem_rss.cpp
        libsigpatsearch/mem_rss.h
        libsigpatsearch/Phenotype.cpp
        libsigpatsearch/Phenotype.h
        libsigpatsearch/Profiler.cpp
        libsigpatsearch/Profiler.h
        libsigpatsearch/pval.cpp
        libsigpatsearch/pval.h
        libsigpatsearch/PValues.cpp
        libsigpatsearch/PValues.h
        libsigpatsearch/SignificantFeaturesSearch.cpp
        libsigpatsearch/SignificantFeaturesSearch.h
        libsigpatsearch/SignificantFeaturesSearchTaroneCmh.cpp
        libsigpatsearch/SignificantFeaturesSearchTaroneCmh.h
        libsigpatsearch/SignificantFeaturesSearchWithCovariates.cpp
        libsigpatsearch/SignificantFeaturesSearchWithCovariates.h
        libsigpatsearch/SignificantIntervalSearch.cpp
        libsigpatsearch/SignificantIntervalSearch.h
        libsigpatsearch/SignificantIntervalSearchChi.cpp
        libsigpatsearch/SignificantIntervalSearchChi.h
        libsigpatsearch/SignificantIntervalSearchExact.cpp
        libsigpatsearch/SignificantIntervalSearchExact.h
        libsigpatsearch/SignificantIntervalSearchFais.cpp
        libsigpatsearch/SignificantIntervalSearchFais.h
        libsigpatsearch/SignificantIntervalSearchFastCmh.cpp
        libsigpatsearch/SignificantIntervalSearchFastCmh.h
        libsigpatsearch/SignificantItemsetSearch.cpp
        libsigpatsearch/SignificantItemsetSearch.h
        libsigpatsearch/SignificantItemsetSearchFacs.cpp
        libsigpatsearch/SignificantItemsetSearchFacs.h
        libsigpatsearch/Summary.cpp
        libsigpatsearch/Summary.h
        libsigpatsearch/TransactionsData.cpp
        libsigpatsearch/TransactionsData.h
        libsigpatsearch/types.h
        r_wrapper/inst/include/ArrayFile.h
        r_wrapper/inst/include/chi2.h
        r_wrapper/inst/include/CumulativeTimeMeasurement.h
        r_wrapper/inst/include/double_comp.h
        r_wrapper/inst/include/Exception.h
        r_wrapper/inst/include/FeatureSet.h
        r_wrapper/inst/include/FilterIntervals.h
        r_wrapper/inst/include/gamma.h
        r_wrapper/inst/include/Genotype.h
        r_wrapper/inst/include/mem_rss.h
        r_wrapper/inst/include/Phenotype.h
        r_wrapper/inst/include/Profiler.h
        r_wrapper/inst/include/pval.h
        r_wrapper/inst/include/PValues.h
        r_wrapper/inst/include/SignificantFeaturesSearch.h
        r_wrapper/inst/include/SignificantFeaturesSearchTaroneCmh.h
        r_wrapper/inst/include/SignificantFeaturesSearchWithCovariates.h
        r_wrapper/inst/include/SignificantIntervalSearch.h
        r_wrapper/inst/include/SignificantIntervalSearchChi.h
        r_wrapper/inst/include/SignificantIntervalSearchExact.h
        r_wrapper/inst/include/SignificantIntervalSearchFais.h
        r_wrapper/inst/include/SignificantIntervalSearchFastCmh.h
        r_wrapper/inst/include/SignificantItemsetSearch.h
        r_wrapper/inst/include/SignificantItemsetSearchFacs.h
        r_wrapper/inst/include/sigpatsearch.h
        r_wrapper/inst/include/Summary.h
        r_wrapper/inst/include/TransactionsData.h
        r_wrapper/inst/include/types.h
        r_wrapper/src/ArrayFile.cpp
        r_wrapper/src/ArrayFile.h
        r_wrapper/src/chi2.h
        r_wrapper/src/CumulativeTimeMeasurement.cpp
        r_wrapper/src/CumulativeTimeMeasurement.h
        r_wrapper/src/double_comp.cpp
        r_wrapper/src/double_comp.h
        r_wrapper/src/Exception.cpp
        r_wrapper/src/Exception.h
        r_wrapper/src/FeatureSet.cpp
        r_wrapper/src/FeatureSet.h
        r_wrapper/src/FilterIntervals.cpp
        r_wrapper/src/FilterIntervals.h
        r_wrapper/src/gamma.cpp
        r_wrapper/src/gamma.h
        r_wrapper/src/Genotype.cpp
        r_wrapper/src/Genotype.h
        r_wrapper/src/mem_rss.cpp
        r_wrapper/src/mem_rss.h
        r_wrapper/src/Phenotype.cpp
        r_wrapper/src/Phenotype.h
        r_wrapper/src/Profiler.cpp
        r_wrapper/src/Profiler.h
        r_wrapper/src/pval.cpp
        r_wrapper/src/pval.h
        r_wrapper/src/PValues.cpp
        r_wrapper/src/PValues.h
        r_wrapper/src/RcppExports.cpp
        r_wrapper/src/SignificantFeaturesSearch.cpp
        r_wrapper/src/SignificantFeaturesSearch.h
        r_wrapper/src/SignificantFeaturesSearchTaroneCmh.cpp
        r_wrapper/src/SignificantFeaturesSearchTaroneCmh.h
        r_wrapper/src/SignificantFeaturesSearchWithCovariates.cpp
        r_wrapper/src/SignificantFeaturesSearchWithCovariates.h
        r_wrapper/src/SignificantIntervalSearch.cpp
        r_wrapper/src/SignificantIntervalSearch.h
        r_wrapper/src/SignificantIntervalSearchChi.cpp
        r_wrapper/src/SignificantIntervalSearchChi.h
        r_wrapper/src/SignificantIntervalSearchExact.cpp
        r_wrapper/src/SignificantIntervalSearchExact.h
        r_wrapper/src/SignificantIntervalSearchFais.cpp
        r_wrapper/src/SignificantIntervalSearchFais.h
        r_wrapper/src/SignificantIntervalSearchFastCmh.cpp
        r_wrapper/src/SignificantIntervalSearchFastCmh.h
        r_wrapper/src/SignificantItemsetSearch.cpp
        r_wrapper/src/SignificantItemsetSearch.h
        r_wrapper/src/SignificantItemsetSearchFacs.cpp
        r_wrapper/src/SignificantItemsetSearchFacs.h
        r_wrapper/src/sigpatsearch.cpp
        r_wrapper/src/Summary.cpp
        r_wrapper/src/Summary.h
        r_wrapper/src/TransactionsData.cpp
        r_wrapper/src/TransactionsData.h
        r_wrapper/src/types.h)
